# CAS-Engine

./: .gitignore  CASEngine.icns  CMakeLists.txt  Info.plist.in  convert.py  generate_icon.sh  imgui.ini  test.scene
CASEngine.icon/: icon.json
assets/: assets.casreg
assets/materials/: lit.casmat  unlit.casmat
assets/shaders/: basic.frag  basic.vert  bezier.frag  bezier.tese  bezier.vert  default.frag  line.frag  line.vert  lit.frag  lit.vert  mrt.frag  mrt.vert  outline.frag  outline.vert  picking.frag  picking.vert  tess.frag  tess.tcs  tess.vert  unlit.frag  unlit.vert
assets/shaders/editor/: grid.frag  grid.vert
assets/shaders/engine/: entity_id.frag  entity_id.vert  handle.frag  handle.geom  handle.vert  uniforms.glsl
include/: bezier_curve.h  camera.h  framebuffer.h  mesh.h  planet.h  resource_manager.h  shader.h  tesselation_shader.h  texture.h  utils.h
include/core/: app_context.h  asset.h  asset_manager.h  asset_manager.inl  asset_traits.h  asset_type_list.h  input.h  project.h  resource_manager.h  simulation_clock.h  uuid.h
include/editor/: editor.h  editor_camera.h  grid_overlay.h  scene_hierarchy.h  selection_context.h  viewport_gizmo_system.h
include/editor/UI_components/: bezier_curve_edit.h
include/editor/panels/: asset_browser.h  console.h  debug_icons.h  properties.h  scene_hierarchy.h
include/renderer/: camera.h  camera_data.h  framebuffer.h  material.h  mesh.h  primitive.h  render_context.h  render_system.h  renderer.h  shader.h  texture.h
include/renderer/primitives/: drawable.h  line.h  mesh.h  patch.h  point.h
include/renderer/systems/: bezier_renderer_system.h  latice_renderer_system.h  line_renderer_system.h  mesh_renderer_system.h
include/scene/: component_defaults.h  component_traits.h  component_type_list.h  components.h  entity.h  logic_system.h  scene.h  scene_serializer.h
include/scene/components/: arc_length_table.h  bezier_component.h  children_component.h  curve.h  id_component.h  latice_component.h  line_component.h  line_follower_component.h  material_component.h  mesh_component.h  parent_component.h  tag_component.h  transform_component.h
include/scene/systems/: line_follower_system.h
include/tmp/: bezier_curve.h  planet.h
include/utils/: IconBindings.h  file_dialog.h  filesystem.h  yaml_extension.h
src/: bezier_curve.cpp  camera.cpp  framebuffer.cpp  main.cpp  mesh.cpp  planet.cpp  resource_manager.cpp  shader.cpp  tesselation_shader.cpp  texture.cpp  utils.cpp
src/core/: asset_manager.cpp  input.cpp  project.cpp  resource_manager.cpp  simulation_clock.cpp  uuid.cpp
src/editor/: editor.cpp  editor_camera.cpp  grid_overlay.cpp  scene_hierarchy.cpp  viewport_gizmo_system.cpp
src/editor/panels/: asset_browser.cpp  console.cpp  properties.cpp  scene_hierarchy.cpp
src/renderer/: camera.cpp  framebuffer.cpp  material.cpp  mesh.cpp  renderer.cpp  shader.cpp  tesselation_shader.cpp  texture.cpp
src/renderer/primitives/: mesh.cpp
src/renderer/systems/: bezier_renderer_system.cpp  latice_renderer_system.cpp  line_renderer_system.cpp  mesh_renderer_system.cpp
src/scene/: scene.cpp  scene_serializer.cpp
src/scene/systems/: line_follower_system.cpp
src/tmp/: bezier_curve.cpp  planet.cpp
src/utils/: file_dialog.mm  utils.cpp
test_project/: Deformation Scene.casscene  Line Following Scene.casscene  Sample scene copy.casscene  Sample scene.cas  Sample scene.casscene  assets.casreg  test.cproj
test_project/assets/: New Material copy.casmat  New Material.casmat  lit_1.casmat  lit_2.casmat
